refactor(kitchenpos): eat in order refactoring